--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,9 +45,11 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
 
     implementation "io.insert-koin:koin-android:3.0.2"
 
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation("com.squareup.okhttp3:logging-interceptor:$okhttp_version")
 }
