--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ buildscript {
         kotlin_version = "1.6.20"
         koin_version = "3.2"
         retrofit_version = "2.9.0"
+        okhttp_version = "4.10.0"
+        fragment_version = "1.5.2"
     }
     repositories {
         google()
